<resources>
    <string name="app_name">Informate Buenaventura</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_desaparecidos">Desaparecidos</string>
    <string name="menu_clasificados">Clasificados</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_comprayventa">Compra y Venta</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_especiales">Especiales</string>
    <string name="menu_compartir">Terminos y Condiciones</string>
    <string name="menu_quienes">¿Quienes Somos?</string>
    <string name="menu_sobre">Sobre Nosotros</string>
    <string name="menu_directorios">Directorios</string>
    <string name="menu_ofertaservicios">Oferta de Servicios</string>
    <string name="menu_ofertaempleos">Oferta de Empleos</string>
    <string name="menu_encuestas">Encuestas</string>
    <string name="menu_bienes">Bienes a la venta</string>
    <string name="menu_donaciones">Donaciones</string>
    <string name="menu_funebres">Avisos Funebres</string>
    <string name="menu_ultimahora">Ultima Hora</string>
    <string name="menu_adopcion">Zona de Adopción</string>
    <string name="menu_recetas">Recetas del Pacífico</string>

    <string name="submenu_ofertas">Ofertas</string>
    <string name="submenu_informativos">Informativos</string>
    <string name="submenu_servicios">Servicios</string>
    <string name="submenu_extras">Extras</string>

    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="compartir">Compartir</string>
    <string name="imagen">Imagen descripción</string>
    <string name="fecha">Fecha de Publicación</string>
    <string name="precio">Precio: $100.000</string>
    <string name="recompensa">Recompensa: $200.000</string>
    <string name="lugar">Lugar: Santa Cruz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_configuraciones">Configuraciones</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="cero"> \ 0</string>

    <string name="publicar_desaparecido">Publicar Desaparición</string>
    <string name="publicar_comprayventa">Vender Articulo</string>
    <string name="publicar_eventos">Publicar Eventos</string>
    <string name="publicar_servicios">Ofrecer Servicios</string>
    <string name="publicar_empleos">Ofrecer Empleos</string>
    <string name="publicar_bienes">Vender Bienes</string>
    <string name="publicar_clasificados">Publicar Clasificados</string>
    <string name="publicar_adopcion">Publicar Adopcion</string>


    <!-- Los hints que se ven de fondo -->

    <string name="inserte_titulo">Ingrese un título para su publicación, este título debe ser claro y puntual para lograr una mejor recepcion</string>
    <string name="inserte_corta">Ingrese una descripción corta para su publicación</string>
    <string name="inserte_descripcion1">Ingrese la primera descripción detallada de su publicacion</string>
    <string name="inserte_descripcion2">Ingrese la segunda descripción detallada de su publicacion</string>


    <!-- Los mensajes de error mostrados en caso de que falte algo -->

    <string name="error_titulo">Debe ingresar un titulo para la publicación</string>
    <string name="error_descripcioncorta">Debe ingresar una descripción corta para la publicación</string>
    <string name="error_descripcion1">Debe ingresar la primera descripción para su publicación</string>
    <string name="error_descripcion2">Debe ingresar la segunda descripción para su publicación</string>
    <string name="error_ubicacion">Debe ingresar la ubicación</string>
    <string name="error_cantidad">Debe ingresar la cantidad disponible de articulos</string>
    <string name="error_precio">Debe ingresar el precio</string>
    <string name="error_contacto">Debe ingresar un metodo para contactarlo</string>


    <!-- Los mensajes de error mostrados en caso de que supere el numero de caracteres -->

    <string name="supera">Ha superado el limite de caracteres</string>

    <string name="title_activity_fullscreen_imagen">Imagen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <!-- Los Anuncios aqui van los id's -->

    <string name="banner_noticias">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_adopcion">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_bienes">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_clasificados">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_comprayventa">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_desaparecidos">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_difuntos">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_donacion">ca-app-pub-3940256099942544/6300978111</string>




    <string name="texto_850">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure.</string>


</resources>
