<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_ib_vector"
            android:title="@string/menu_inicio" />
    </group>

    <item android:title="@string/submenu_informativos">
        <menu>
            <item
                android:id="@+id/nav_ultimahora"
                android:title="@string/menu_ultimahora"
                android:icon="@drawable/ic_ultima_hora_vector"/>
            <item
                android:id="@+id/nav_noticias"
                android:icon="@drawable/ic_noticias_vector"
                android:title="@string/menu_noticias" />
            <item
                android:id="@+id/nav_desaparecidos"
                android:icon="@drawable/ic_desaparecidos_vector"
                android:title="@string/menu_desaparecidos" />
            <item
                android:id="@+id/nav_eventos"
                android:icon="@drawable/ic_eventos_vector"
                android:title="@string/menu_eventos" />
        </menu>
    </item>
    <item android:title="@string/submenu_servicios">
    <menu>
        <item
            android:id="@+id/nav_adopcion"
            android:icon="@drawable/ic_adopcion_vector"
            android:title="@string/menu_adopcion"/>
        <item
            android:id="@+id/nav_clasificados"
            android:icon="@drawable/ic_clasificados_vector"
            android:title="@string/menu_clasificados" />
        <item
            android:id="@+id/nav_funebres"
            android:icon="@drawable/ic_funebres_vector"
            android:title="@string/menu_funebres"/>
        <item
            android:id="@+id/nav_directorio"
            android:icon="@drawable/ic_directorio_vector"
            android:title="@string/menu_directorios" />
    </menu>

    </item>
    <item android:title="Negocios"  >
    <menu>
        <item
            android:id="@+id/nav_ofertaservicios"
            android:icon="@drawable/ic_servicios_vector"
            android:title="@string/menu_ofertaservicios"/>
        <item
            android:id="@+id/nav_ofertaempleos"
            android:icon="@drawable/ic_empleo_vector"
            android:title="@string/menu_ofertaempleos"/>
        <item
            android:id="@+id/nav_comprayventa"
            android:icon="@drawable/ic_comprayventa_vector"
            android:title="@string/menu_comprayventa" />
        <item
            android:id="@+id/nav_bienes"
            android:icon="@drawable/ic_bienes_vector"
            android:title="@string/menu_bienes"/>
    </menu>
</item>
    <item android:title="@string/submenu_extras">
        <menu>
            <item
                android:id="@+id/nav_encuestas"
                android:icon="@drawable/ic_encuesta_vector"
                android:title="@string/menu_encuestas" />
            <item
                android:id="@+id/nav_donaciones"
                android:icon="@drawable/ic_donaciones_vector"
                android:title="@string/menu_donaciones" />
            <item
                android:id="@+id/nav_especiales"
                android:icon="@drawable/ic_especiales_vector"
                android:title="@string/menu_especiales" />
        </menu>
    </item>
    <item android:title="@string/menu_sobre">
        <menu>
            <item
                android:id="@+id/nav_quienes"
                android:icon="@drawable/ic_terminos_vector"
                android:title="@string/menu_compartir" />
        </menu>
    </item>
</menu>
