<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">


    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.pacificblack.informatebuenaventura.fragments.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_desaparecidos"
        android:name="com.pacificblack.informatebuenaventura.fragments.desaparecidos.DesaparecidosFragment"
        android:label="@string/menu_desaparecidos"
        tools:layout="@layout/fragment_desaparecidos" />
    <fragment
        android:id="@+id/nav_clasificados"
        android:name="com.pacificblack.informatebuenaventura.fragments.clasificados.ClasificadosFragment"
        android:label="@string/menu_clasificados"
        tools:layout="@layout/fragment_clasificados" />
    <fragment
        android:id="@+id/nav_comprayventa"
        android:name="com.pacificblack.informatebuenaventura.fragments.comprayventa.ComprayVentaFragment"
        android:label="@string/menu_comprayventa"
        tools:layout="@layout/fragment_compray_venta" />
    <fragment
        android:id="@+id/nav_especiales"
        android:name="com.pacificblack.informatebuenaventura.fragments.especiales.EspecialesFragment"
        android:label="@string/menu_especiales"
        tools:layout="@layout/fragment_especiales" />
    <fragment
        android:id="@+id/nav_eventos"
        android:name="com.pacificblack.informatebuenaventura.fragments.eventos.EventosFragment"
        android:label="@string/menu_eventos"
        tools:layout="@layout/fragment_eventos" />
    <fragment
        android:id="@+id/nav_noticias"
        android:name="com.pacificblack.informatebuenaventura.fragments.noticias.NoticiasFragment"
        android:label="@string/menu_noticias"
        tools:layout="@layout/fragment_noticias" />
    <fragment
        android:id="@+id/nav_quienes"
        android:name="com.pacificblack.informatebuenaventura.fragments.quienes.QuienesFragment"
        android:label="Terminos y Condiciones"
        tools:layout="@layout/fragment_quienes" />
    <fragment
        android:id="@+id/nav_directorio"
        android:name="com.pacificblack.informatebuenaventura.fragments.directorios.DirectoriosFragment"
        android:label="@string/menu_directorios"
        tools:layout="@layout/fragment_directorios" />
    <fragment
        android:id="@+id/nav_bienes"
        android:name="com.pacificblack.informatebuenaventura.fragments.bienesraizes.BienesFragment"
        android:label="@string/menu_bienes"
        tools:layout="@layout/fragment_bienes" />
    <fragment
        android:id="@+id/nav_ofertaservicios"
        android:name="com.pacificblack.informatebuenaventura.fragments.ofertas.OfertaServiciosFragment"
        android:label="@string/menu_ofertaservicios"
        tools:layout="@layout/fragment_ofertaservicios" />
    <fragment
        android:id="@+id/nav_ofertaempleos"
        android:name="com.pacificblack.informatebuenaventura.fragments.ofertas.OfertaEmpleosFragment"
        android:label="@string/menu_ofertaempleos"
        tools:layout="@layout/fragment_oferta_empleos" />
    <fragment
        android:id="@+id/nav_encuestas"
        android:name="com.pacificblack.informatebuenaventura.fragments.especiales.encuestas.EncuestasFragment"
        android:label="@string/menu_encuestas"
        tools:layout="@layout/fragment_encuestas" />
    <fragment
        android:id="@+id/nav_donaciones"
        android:name="com.pacificblack.informatebuenaventura.fragments.donacionesparacausas.DonacionesFragment"
        android:label="@string/menu_donaciones"
        tools:layout="@layout/fragment_donaciones" />
    <fragment
        android:id="@+id/nav_funebres"
        android:name="com.pacificblack.informatebuenaventura.fragments.avisosfunebres.FunebresFragment"
        android:label="@string/menu_funebres"
        tools:layout="@layout/fragment_funebres" />
    <fragment
        android:id="@+id/nav_ultimahora"
        android:name="com.pacificblack.informatebuenaventura.fragments.noticias.UltimaHoraFragment"
        android:label="@string/menu_ultimahora"
        tools:layout="@layout/fragment_ultima_hora" />
    <fragment
        android:id="@+id/nav_adopcion"
        android:name="com.pacificblack.informatebuenaventura.fragments.adopcion.AdopcionFragment"
        android:label="@string/menu_adopcion"
        tools:layout="@layout/fragment_adopcion" />

</navigation>