<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen_row_compra"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/imagen"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titulo_row_compra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/bree_serif"
                    android:text="@string/titulo"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/descripcion_row_compra"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/descripcion"
                    android:textColor="#555" />

                <TextView
                    android:id="@+id/fecha_row_compra"
                    tools:ignore="SmallSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dancing_script"
                    android:text="@string/fecha"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/precio_row_compra"
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/baloo"
                    android:text="@string/precio" />

                <TextView
                    android:id="@+id/vista_row_compra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginLeft="120dp"
                    android:layout_weight="2"
                    android:baselineAligned="false"
                    android:drawableStart="@drawable/ic_ojo_24dp"
                    android:drawableLeft="@drawable/ic_ojo_24dp"
                    android:fontFamily="@font/amaranth_bold"
                    android:text="@string/cero" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>