<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
>

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

            <ImageView
                android:id="@+id/imagen_row"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="fitCenter"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/imagen" />
            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

                <TextView
                    android:id="@+id/titulo_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/titulo"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/descripcion_row"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:text="@string/descripcion"
                    android:textColor="#555" />

</LinearLayout>

            <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

                <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/compartir"
     />



            </LinearLayout>

</LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>