<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="8dp"
        android:elevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imagen_row_ofertaempleos"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/imagen"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titulo_row_ofertaempleos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cabin_semibold"
                    android:text="@string/titulo"
                    android:textColor="#000"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/descripcion_row_ofertaempleos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:textSize="12sp"
                    android:text="@string/descripcion"
                    android:textColor="#555"
                    android:layout_marginTop="8dp"
                    />

                <TextView
                    android:id="@+id/fecha_row_ofertaempleos"
                    tools:ignore="SmallSp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/fecha"
                    android:textSize="9sp"
                    android:layout_marginTop="8dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/nota_row_ofertaempleos"
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/keyline_1_minus_8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/recompensa"
                    android:textSize="10sp"/>

                <TextView
                    android:id="@+id/vista_row_ofertaempleos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginLeft="120dp"
                    android:layout_weight="2"
                    android:baselineAligned="false"
                    android:fontFamily="@font/ubuntu_medium"
                    android:text="@string/cero"
                    android:textSize="10sp" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>