<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="8dp"
        android:elevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imagen_row_ultimahora"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/imagen"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/titulo_row_ultimahora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/cabin_semibold"
                        android:text="@string/titulo"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/descripcion_row_ultimahora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu"
                        android:text="@string/descripcion"
                        android:textColor="#555" />

                    <TextView
                        android:id="@+id/fecha_row_ultimahora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/ubuntu_medium"
                        android:text="@string/fecha"
                        android:textColor="#555"
                        android:textSize="9sp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/vista_row_ultimahora"
                    android:layout_width="333dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="4dp"
                    android:baselineAligned="false"
                    android:drawableStart="@drawable/ic_ojo_24dp"
                    android:drawableLeft="@drawable/ic_ojo_24dp"
                    android:fontFamily="@font/amaranth_bold"
                    android:text="@string/cero"
                    android:textColor="@color/blanco"
                    android:visibility="gone" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>